lab4/semantic/grammatic.output
Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list_ne
    3          | /* empty */

    4 stmt_list_ne: stmt
    5             | stmt_list_ne stmt

    6 stmt: expr NL
    7     | NL
    8     | if_stmt NL
    9     | for_stmt NL
   10     | while_stmt NL
   11     | until_stmt NL
   12     | RETURN expr NL
   13     | class_stmt NL
   14     | def_stmt NL

   15 method_member: expr NL
   16              | NL
   17              | if_stmt NL
   18              | for_stmt NL
   19              | while_stmt NL
   20              | until_stmt NL
   21              | RETURN expr NL
   22              | BREAK NL

   23 method_member_s: expr
   24                | if_stmt
   25                | for_stmt
   26                | while_stmt
   27                | until_stmt

   28 method_members_ne: method_member
   29                  | method_members_ne method_member

   30 method_members_ne_do: method_member_s
   31                     | method_members_ne_do ',' method_member_s

   32 method_members: method_members_ne
   33               | /* empty */

   34 class_member: NL
   35             | ID NL
   36             | def_stmt NL
   37             | PUBLIC ':' ID NL
   38             | PRIVATE ':' ID NL
   39             | PROTECTED ':' ID NL
   40             | PUBLIC def_stmt NL
   41             | PRIVATE def_stmt NL
   42             | PROTECTED def_stmt NL

   43 class_member_list: class_member
   44                  | class_member_list class_member

   45 if_stmt: IF expr THEN method_members_ne END
   46        | IF expr THEN method_members_ne ELSE method_members_ne END
   47        | IF expr NL method_members_ne END
   48        | IF expr NL method_members_ne ELSE NL method_members_ne END
   49        | IF expr THEN method_members_ne_do END
   50        | IF expr THEN method_members_ne_do ELSE method_members_ne_do END

   51 for_stmt: FOR expr IN expr DO method_members_ne END
   52         | FOR expr IN expr NL method_members_ne END
   53         | FOR expr IN expr DO method_members_ne_do END

   54 while_stmt: WHILE expr DO method_members_ne END
   55           | WHILE expr NL method_members_ne END
   56           | WHILE expr DO method_members_ne_do END

   57 until_stmt: UNTIL expr DO method_members_ne END
   58           | UNTIL expr NL method_members_ne END
   59           | UNTIL expr DO method_members_ne_do END

   60 expr_list: expr_list ',' expr
   61          | expr

   62 def_stmt: DEF ID NL method_members END
   63         | DEF ID '(' id_listE ')' NL method_members END

   64 class_stmt: CLASS CONST NL class_member_list END
   65           | CLASS CONST '<' CONST NL class_member_list END

   66 id_listE: id_list
   67         | /* empty */

   68 id_list: id_list ',' ID
   69        | ID

   70 expr: CONST
   71     | ID
   72     | STRING
   73     | INT
   74     | FLOAT
   75     | BOOL
   76     | NIL
   77     | SELF
   78     | expr '+' expr
   79     | expr '-' expr
   80     | expr '*' expr
   81     | expr '/' expr
   82     | expr '<' expr
   83     | expr '>' expr
   84     | expr '=' expr
   85     | expr LESSEQ expr
   86     | expr MOREEQ expr
   87     | expr EQ expr
   88     | expr NEQ expr
   89     | expr LESSMORE expr
   90     | expr ANDWORD expr
   91     | expr ORWORD expr
   92     | NOTWORD expr
   93     | expr OR expr
   94     | expr AND expr
   95     | NOT expr
   96     | expr DOUBLECOLON expr
   97     | expr ADDASSIGN expr
   98     | expr SUBASSIGN expr
   99     | expr MULASSIGN expr
  100     | expr DIVASSIGN expr
  101     | expr TWOPOINT expr
  102     | expr THREEPOINT expr
  103     | '-' expr
  104     | '+' expr
  105     | expr '.' ID
  106     | expr '.' ID '(' ')'
  107     | expr '.' ID '(' expr_list ')'
  108     | PRINT '(' expr ')'
  109     | PUTS '(' expr ')'
  110     | ID '(' ')'
  111     | ID '(' expr_list ')'
  112     | SUPER
  113     | SUPER '(' ')'
  114     | SUPER '(' expr_list ')'
  115     | init_array_expr
  116     | expr '[' expr ']'

  117 init_array_expr: '[' expr_list ']'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 63 106 107 108 109 110 111 113 114
')' (41) 63 106 107 108 109 110 111 113 114
'*' (42) 80
'+' (43) 78 104
',' (44) 31 60 68
'-' (45) 79 103
'.' (46) 105 106 107
'/' (47) 81
':' (58) 37 38 39
'<' (60) 65 82
'=' (61) 84
'>' (62) 83
'[' (91) 116 117
']' (93) 116 117
error (256)
CLASS (258) 64 65
NIL (259) 76
SELF (260) 77
DEF (261) 62 63
SUPER (262) 112 113 114
WHILE (263) 54 55 56
FOR (264) 51 52 53
THEN (265) 45 46 49 50
DO (266) 51 53 54 56 57 59
IF (267) 45 46 47 48 49 50
ELSE (268) 46 48 50
IN (269) 51 52 53
BREAK (270) 22
END (271) 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 62 63 64 65
RETURN (272) 12 21
UNTIL (273) 57 58 59
PRINT (274) 108
PUTS (275) 109
CONST (276) 64 65 70
ID (277) 35 37 38 39 62 63 68 69 71 105 106 107 110 111
NL (278) 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 34 35 36 37
    38 39 40 41 42 47 48 52 55 58 62 63 64 65
PUBLIC (279) 37 40
PRIVATE (280) 38 41
PROTECTED (281) 39 42
INT (282) 73
FLOAT (283) 74
STRING (284) 72
BOOL (285) 75
ORWORD (286) 91
ANDWORD (287) 90
NOTWORD (288) 92
DIVASSIGN (289) 100
MULASSIGN (290) 99
SUBASSIGN (291) 98
ADDASSIGN (292) 97
THREEPOINT (293) 102
TWOPOINT (294) 101
AND (295) 94
OR (296) 93
MOREEQ (297) 86
LESSEQ (298) 85
LESSMORE (299) 89
NEQ (300) 88
EQ (301) 87
UMINUS (302)
NOT (303) 95
UPLUS (304)
DOUBLECOLON (305) 96


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
program (66)
    on left: 1, on right: 0
stmt_list (67)
    on left: 2 3, on right: 1
stmt_list_ne (68)
    on left: 4 5, on right: 2 5
stmt (69)
    on left: 6 7 8 9 10 11 12 13 14, on right: 4 5
method_member (70)
    on left: 15 16 17 18 19 20 21 22, on right: 28 29
method_member_s (71)
    on left: 23 24 25 26 27, on right: 30 31
method_members_ne (72)
    on left: 28 29, on right: 29 32 45 46 47 48 51 52 54 55 57 58
method_members_ne_do (73)
    on left: 30 31, on right: 31 49 50 53 56 59
method_members (74)
    on left: 32 33, on right: 62 63
class_member (75)
    on left: 34 35 36 37 38 39 40 41 42, on right: 43 44
class_member_list (76)
    on left: 43 44, on right: 44 64 65
if_stmt (77)
    on left: 45 46 47 48 49 50, on right: 8 17 24
for_stmt (78)
    on left: 51 52 53, on right: 9 18 25
while_stmt (79)
    on left: 54 55 56, on right: 10 19 26
until_stmt (80)
    on left: 57 58 59, on right: 11 20 27
expr_list (81)
    on left: 60 61, on right: 60 107 111 114 117
def_stmt (82)
    on left: 62 63, on right: 14 36 40 41 42
class_stmt (83)
    on left: 64 65, on right: 13
id_listE (84)
    on left: 66 67, on right: 63
id_list (85)
    on left: 68 69, on right: 66 68
expr (86)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108 109 110 111 112 113 114 115 116, on right: 6 12 15 21 23
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 116
init_array_expr (87)
    on left: 117, on right: 115


state 0

    0 $accept: . program $end

    CLASS    shift, and go to state 1
    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    DEF      shift, and go to state 4
    SUPER    shift, and go to state 5
    WHILE    shift, and go to state 6
    FOR      shift, and go to state 7
    IF       shift, and go to state 8
    RETURN   shift, and go to state 9
    UNTIL    shift, and go to state 10
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    NL       shift, and go to state 15
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    $default  reduce using rule 3 (stmt_list)

    program          go to state 25
    stmt_list        go to state 26
    stmt_list_ne     go to state 27
    stmt             go to state 28
    if_stmt          go to state 29
    for_stmt         go to state 30
    while_stmt       go to state 31
    until_stmt       go to state 32
    def_stmt         go to state 33
    class_stmt       go to state 34
    expr             go to state 35
    init_array_expr  go to state 36


state 1

   64 class_stmt: CLASS . CONST NL class_member_list END
   65           | CLASS . CONST '<' CONST NL class_member_list END

    CONST  shift, and go to state 37


state 2

   76 expr: NIL .

    $default  reduce using rule 76 (expr)


state 3

   77 expr: SELF .

    $default  reduce using rule 77 (expr)


state 4

   62 def_stmt: DEF . ID NL method_members END
   63         | DEF . ID '(' id_listE ')' NL method_members END

    ID  shift, and go to state 38


state 5

  112 expr: SUPER .
  113     | SUPER . '(' ')'
  114     | SUPER . '(' expr_list ')'

    '('  shift, and go to state 39

    $default  reduce using rule 112 (expr)


state 6

   54 while_stmt: WHILE . expr DO method_members_ne END
   55           | WHILE . expr NL method_members_ne END
   56           | WHILE . expr DO method_members_ne_do END

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 40
    init_array_expr  go to state 36


state 7

   51 for_stmt: FOR . expr IN expr DO method_members_ne END
   52         | FOR . expr IN expr NL method_members_ne END
   53         | FOR . expr IN expr DO method_members_ne_do END

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 41
    init_array_expr  go to state 36


state 8

   45 if_stmt: IF . expr THEN method_members_ne END
   46        | IF . expr THEN method_members_ne ELSE method_members_ne END
   47        | IF . expr NL method_members_ne END
   48        | IF . expr NL method_members_ne ELSE NL method_members_ne END
   49        | IF . expr THEN method_members_ne_do END
   50        | IF . expr THEN method_members_ne_do ELSE method_members_ne_do END

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 42
    init_array_expr  go to state 36


state 9

   12 stmt: RETURN . expr NL

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 43
    init_array_expr  go to state 36


state 10

   57 until_stmt: UNTIL . expr DO method_members_ne END
   58           | UNTIL . expr NL method_members_ne END
   59           | UNTIL . expr DO method_members_ne_do END

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 44
    init_array_expr  go to state 36


state 11

  108 expr: PRINT . '(' expr ')'

    '('  shift, and go to state 45


state 12

  109 expr: PUTS . '(' expr ')'

    '('  shift, and go to state 46


state 13

   70 expr: CONST .

    $default  reduce using rule 70 (expr)


state 14

   71 expr: ID .
  110     | ID . '(' ')'
  111     | ID . '(' expr_list ')'

    '('  shift, and go to state 47

    $default  reduce using rule 71 (expr)


state 15

    7 stmt: NL .

    $default  reduce using rule 7 (stmt)


state 16

   73 expr: INT .

    $default  reduce using rule 73 (expr)


state 17

   74 expr: FLOAT .

    $default  reduce using rule 74 (expr)


state 18

   72 expr: STRING .

    $default  reduce using rule 72 (expr)


state 19

   75 expr: BOOL .

    $default  reduce using rule 75 (expr)


state 20

   92 expr: NOTWORD . expr

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 48
    init_array_expr  go to state 36


state 21

  103 expr: '-' . expr

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 49
    init_array_expr  go to state 36


state 22

  104 expr: '+' . expr

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 50
    init_array_expr  go to state 36


state 23

   95 expr: NOT . expr

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr             go to state 51
    init_array_expr  go to state 36


state 24

  117 init_array_expr: '[' . expr_list ']'

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    expr_list        go to state 52
    expr             go to state 53
    init_array_expr  go to state 36


state 25

    0 $accept: program . $end

    $end  shift, and go to state 54


state 26

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


state 27

    2 stmt_list: stmt_list_ne .
    5 stmt_list_ne: stmt_list_ne . stmt

    CLASS    shift, and go to state 1
    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    DEF      shift, and go to state 4
    SUPER    shift, and go to state 5
    WHILE    shift, and go to state 6
    FOR      shift, and go to state 7
    IF       shift, and go to state 8
    RETURN   shift, and go to state 9
    UNTIL    shift, and go to state 10
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    NL       shift, and go to state 15
    INT      shift, and go to state 16
    FLOAT    shift, and go to state 17
    STRING   shift, and go to state 18
    BOOL     shift, and go to state 19
    NOTWORD  shift, and go to state 20
    '-'      shift, and go to state 21
    '+'      shift, and go to state 22
    NOT      shift, and go to state 23
    '['      shift, and go to state 24

    $default  reduce using rule 2 (stmt_list)

    stmt             go to state 55
    if_stmt          go to state 29
    for_stmt         go to state 30
    while_stmt       go to state 31
    until_stmt       go to state 32
    def_stmt         go to state 33
    class_stmt       go to state 34
    expr             go to state 35
    init_array_expr  go to state 36


state 28

    4 stmt_list_ne: stmt .

    $default  reduce using rule 4 (stmt_list_ne)


state 29

    8 stmt: if_stmt . NL

    NL  shift, and go to state 56


state 30

    9 stmt: for_stmt . NL

    NL  shift, and go to state 57


state 31

   10 stmt: while_stmt . NL

    NL  shift, and go to state 58


state 32

   11 stmt: until_stmt . NL

    NL  shift, and go to state 59


state 33

   14 stmt: def_stmt . NL

    NL  shift, and go to state 60


state 34

   13 stmt: class_stmt . NL

    NL  shift, and go to state 61


state 35

    6 stmt: expr . NL
   78 expr: expr . '+' expr
   79     | expr . '-' expr
   80     | expr . '*' expr
   81     | expr . '/' expr
   82     | expr . '<' expr
   83     | expr . '>' expr
   84     | expr . '=' expr
   85     | expr . LESSEQ expr
   86     | expr . MOREEQ expr
   87     | expr . EQ expr
   88     | expr . NEQ expr
   89     | expr . LESSMORE expr
   90     | expr . ANDWORD expr
   91     | expr . ORWORD expr
   93     | expr . OR expr
   94     | expr . AND expr
   96     | expr . DOUBLECOLON expr
   97     | expr . ADDASSIGN expr
   98     | expr . SUBASSIGN expr
   99     | expr . MULASSIGN expr
  100     | expr . DIVASSIGN expr
  101     | expr . TWOPOINT expr
  102     | expr . THREEPOINT expr
  105     | expr . '.' ID
  106     | expr . '.' ID '(' ')'
  107     | expr . '.' ID '(' expr_list ')'
  116     | expr . '[' expr ']'

    NL           shift, and go to state 62
    ORWORD       shift, and go to state 63
    ANDWORD      shift, and go to state 64
    '='          shift, and go to state 65
    DIVASSIGN    shift, and go to state 66
    MULASSIGN    shift, and go to state 67
    SUBASSIGN    shift, and go to state 68
    ADDASSIGN    shift, and go to state 69
    THREEPOINT   shift, and go to state 70
    TWOPOINT     shift, and go to state 71
    AND          shift, and go to state 72
    OR           shift, and go to state 73
    '-'          shift, and go to state 74
    '+'          shift, and go to state 75
    '*'          shift, and go to state 76
    '/'          shift, and go to state 77
    '>'          shift, and go to state 78
    '<'          shift, and go to state 79
    MOREEQ       shift, and go to state 80
    LESSEQ       shift, and go to state 81
    LESSMORE     shift, and go to state 82
    NEQ          shift, and go to state 83
    EQ           shift, and go to state 84
    '['          shift, and go to state 85
    '.'          shift, and go to state 86
    DOUBLECOLON  shift, and go to state 87


state 36

  115 expr: init_array_expr .

    $default  reduce using rule 115 (expr)


state 37

   64 class_stmt: CLASS CONST . NL class_member_list END
   65           | CLASS CONST . '<' CONST NL class_member_list END

    NL   shift, and go to state 88
    '<'  shift, and go to state 89


state 38

   62 def_stmt: DEF ID . NL method_members END
   63         | DEF ID . '(' id_listE ')' NL method_members END

    NL   shift, and go to state 90
    '('  shift, and go to state 91


state 39

  113 expr: SUPER '(' . ')'
  114     | SUPER '(' . expr_list ')'

    NIL      shift, and go to state 2
    SELF     shift, and go to state 3
    SUPER    shift, and go to state 5
    PRINT    shift, and go to state 11
    PUTS     shift, and go to state 12
    CONST    shift, and go to state 13
    ID       shift, and go to state 14
    INT      shift, and go to state 16
